<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/home_gray_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <!-- -->
        <TextView
            android:id="@+id/tv_title"
            style="@style/topbarText.title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/layout_back"
            android:text="@string/setting_name"
            android:textColor="@color/home_text1"/>

        <!--左 -->
        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@mipmap/setting_back"/>
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/setting_wifi"
            android:textColor="@color/home_text1"
            android:textSize="14sp"/>

        <Switch
            android:id="@+id/switch_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:thumb="@drawable/switch_btnstyle"
            android:track="@drawable/switch_bgstyle"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/setting_message"
            android:textColor="@color/home_text1"
            android:textSize="14sp"/>

        <Switch
            android:id="@+id/switch_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:checked="true"
            android:thumb="@drawable/switch_btnstyle"
            android:track="@drawable/switch_bgstyle"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <RelativeLayout
        android:id="@+id/layout_clear"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/setting_clear"
            android:textColor="@color/home_text1"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:drawableEnd="@mipmap/setting_forword"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="22M"
            android:textColor="@color/filter_reset_tvcl"
            android:textSize="14sp"/>


    </RelativeLayout>

</LinearLayout>